--- a/test/fixtures/chat_memberships.yml
+++ b/test/fixtures/chat_memberships.yml
@@ -1,11 +1,25 @@
 # Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  user: one
-  chat: one
-  admin: false
+  id: 1
+  user_id: 1
+  chat_id: 1
+  admin: true
 
 two:
-  user: two
-  chat: two
+  id: 2
+  user_id: 2
+  chat_id: 1
+  admin: false
+
+three:
+  id: 3
+  user_id: 1
+  chat_id: 2
+  admin: true
+
+four:
+  id: 4
+  user_id: 2
+  chat_id: 2
   admin: false
