--- a/test/fixtures/chats.yml
+++ b/test/fixtures/chats.yml
@@ -1,9 +1,11 @@
 # Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  name: MyString
+  id: 1
+  name: "Test Chat 1"
   is_group: false
 
 two:
-  name: MyString
-  is_group: false
+  id: 2
+  name: "Test Group Chat"
+  is_group: true
