--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -4,8 +4,26 @@
 # model remove the "{}" from the fixture names and add the columns immediately
 # below each fixture, per the syntax in the comments below
 #
-one: {}
-# column: value
-#
-two: {}
-# column: value
+one:
+  id: 1
+  name: "Test User 1"
+  email: "test1@example.com"
+  encrypted_password: <%= User.new.send(:password_digest, 'password123') %>
+  status: "Available"
+  online_status: true
+
+two:
+  id: 2
+  name: "Test User 2"
+  email: "test2@example.com"
+  encrypted_password: <%= User.new.send(:password_digest, 'password123') %>
+  status: "Away"
+  online_status: false
+
+admin:
+  id: 3
+  name: "Admin User"
+  email: "admin@example.com"
+  encrypted_password: <%= User.new.send(:password_digest, 'password123') %>
+  status: "Busy"
+  online_status: true
