--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -42,13 +42,6 @@ jobs:
       - name: Run Ruby tests
         run: bundle exec rake
 
-      - name: Upload Ruby test coverage to Codecov
-        uses: codecov/codecov-action@v3
-        with:
-          files: ./coverage/.resultset.json
-          flags: ruby
-          fail_ci_if_error: false
-
       - name: Set up Node.js
         uses: actions/setup-node@v3
         with:
@@ -58,12 +51,5 @@ jobs:
       - name: Install Node.js dependencies
         run: npm install
 
-      - name: Run JavaScript tests with coverage
-        run: npm run test:coverage
-
-      - name: Upload JavaScript test coverage to Codecov
-        uses: codecov/codecov-action@v3
-        with:
-          files: ./coverage/jest/lcov.info
-          flags: javascript
-          fail_ci_if_error: false
+      - name: Run JavaScript tests
+        run: npm test
